--- a/views/index.erb
+++ b/views/index.erb
@@ -66,8 +66,19 @@
       </fieldset>
       <h3>Recommendations</h3>
 
-
-
+      <% recommendations.each do |recommendation| %>
+      <div class="nhsuk-u-padding-bottom-9">
+        <h4><%= recommendation[:title] %></h4>
+        <p><%= recommendation[:description] %></p>
+        <div class="nhsuk-checkboxes__item">
+          <input class="nhsuk-checkboxes__input" id="example-1" name="example" type="checkbox" value="email">
+          <label class="nhsuk-label nhsuk-checkboxes__label" for="example-1">
+            Recommended
+          </label>
+        </div>
+      </div>
+      <hr class="nhsuk-section-break nhsuk-section-break--visible">
+    <% end %>
     </div>
 
     <footer role="contentinfo">
