--- a/views/discharge_summary_step.erb
+++ b/views/discharge_summary_step.erb
@@ -1,5 +1,5 @@
-<form method="POST">
-  <div class="nhsuk-width-container">
+<div class="nhsuk-width-container">
+  <form method="POST" action="/recommendations">
     <fieldset class="nhsuk-fieldset">
       <legend class="nhsuk-fieldset__legend nhsuk-fieldset__legend--l">
         <h1 class="nhsuk-fieldset__heading">
@@ -16,23 +16,8 @@
         <textarea class="nhsuk-textarea" id="discharge-summary" name="discharge-summary" rows="5" aria-describedby="discharge-summary"></textarea>
       </div>
     </fieldset>
-    <div class="nhsuk-u-padding-bottom-5">
-      <h3>Recommendations</h3>
-      <% recommendations.each do |recommendation| %>
-        <div>
-          <h4><%= recommendation[:title] %></h4>
-          <p><%= recommendation[:description] %></p>
-          <div class="nhsuk-checkboxes__item">
-            <input class="nhsuk-checkboxes__input" id="example-1" name="example" type="checkbox" value="email">
-            <label class="nhsuk-label nhsuk-checkboxes__label" for="example-1">
-              Recommended
-            </label>
-          </div>
-        </div>
-      <% end %>
-    </div>
     <button class="nhsuk-button" type="submit">
       Continue
     </button>
-  </div>
-</form>
+  </form>
+</div>
