--- a/views/discharge_summary_step.erb
+++ b/views/discharge_summary_step.erb
@@ -1,5 +1,5 @@
 <div class="nhsuk-width-container">
-  <form method="POST" action="/recommendations">
+  <form method="GET" action="/recommendations">
     <fieldset class="nhsuk-fieldset">
       <legend class="nhsuk-fieldset__legend nhsuk-fieldset__legend--l">
         <h1 class="nhsuk-fieldset__heading">
