Ignore server.pid and adjust text

--- a/views/discharge_summary_step.erb
+++ b/views/discharge_summary_step.erb
@@ -11,7 +11,7 @@
           Can you provide the discharge summary?
         </label>
         <span class="nhsuk-hint" id="discharge-summary">
-            Do not include personal information, for example, your National Insurance number, names, postcodes, telephone numbers.
+            Do not include personal information, for example, National Insurance numbers, names, postcodes, telephone numbers.
           </span>
         <textarea class="nhsuk-textarea" id="discharge-summary" name="discharge-summary" rows="5" aria-describedby="discharge-summary"></textarea>
       </div>
