--- a/views/recommendations.erb
+++ b/views/recommendations.erb
@@ -1,3 +1,4 @@
+<div class="nhsuk-u-padding-2"></div>
 <div class="nhsuk-width-container">
   <form method="GET" action="/done">
     <div class="nhsuk-u-padding-bottom-5">
