--- a/views/recommendations_summary.erb
+++ b/views/recommendations_summary.erb
@@ -1,3 +1,4 @@
+<div class="nhsuk-u-padding-2"></div>
 <div class="nhsuk-width-container">
   <div class="nhsuk-back-link">
     <a class="nhsuk-back-link__link" href="/recommendations">
@@ -30,7 +31,9 @@
       </li>
     </ul>
   </div>
-  <button class="nhsuk-button " type="submit">
-    Send
-  </button>
+  <form action="/send" method="get">
+    <button class="nhsuk-button" type="submit">
+      Send
+    </button>
+  </form>
 </div>
