--- a/views/recommendations_summary.erb
+++ b/views/recommendations_summary.erb
@@ -11,24 +11,14 @@
   <div class="nhsuk-do-dont-list">
     <h3 class="nhsuk-do-dont-list__label">Recommendations</h3>
     <ul class="nhsuk-list nhsuk-list--tick">
+      <% @recommender.recommendations_summary[:recommendations].each do |recommendation| %>
       <li>
         <svg class="nhsuk-icon nhsuk-icon__tick" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" aria-hidden="true">
           <path stroke-width="4" stroke-linecap="round" d="M18.4 7.8l-8.5 8.4L5.6 12"></path>
         </svg>
-        Walking Group
+        <%= recommendation[:title] %>
       </li>
-      <li>
-        <svg class="nhsuk-icon nhsuk-icon__tick" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" aria-hidden="true">
-          <path stroke-width="4" stroke-linecap="round" d="M18.4 7.8l-8.5 8.4L5.6 12"></path>
-        </svg>
-        Crafts Cardiff
-      </li>
-      <li>
-        <svg class="nhsuk-icon nhsuk-icon__tick" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" aria-hidden="true">
-          <path stroke-width="4" stroke-linecap="round" d="M18.4 7.8l-8.5 8.4L5.6 12"></path>
-        </svg>
-        Tai Chi
-      </li>
+      <% end %>
     </ul>
   </div>
   <form action="/send" method="get">
