--- a/views/recommendations.erb
+++ b/views/recommendations.erb
@@ -2,7 +2,7 @@
 <div class="nhsuk-width-container">
   <form method="GET" action="/done">
     <div class="nhsuk-u-padding-bottom-5">
-      <h3>Recommendations based on keywords in your discharge summary</h3>
+      <h3>Recommendations based on the discharge summary</h3>
       <% recommendations.each do |recommendation| %>
         <div class="nhsuk-u-padding-bottom-9">
           <h4 class="nhsuk-u-margin-bottom-0"><%= recommendation[:title] %></h4>
