Link up select boxes

--- a/views/recommendations.erb
+++ b/views/recommendations.erb
@@ -10,9 +10,9 @@
           <div class="nhsuk-checkboxes__item">
             <input class="nhsuk-checkboxes__input"
                    id="example-1"
-                   name="example"
+                   name="selected_recommendation[]"
                    type="checkbox"
-                   value="email">
+                   value="<%= recommendation[:id] %>">
             <label class="nhsuk-label nhsuk-checkboxes__label"
                    for="example-1">
               Select
