Update branding a littlr

--- a/views/discharge_summary_step.erb
+++ b/views/discharge_summary_step.erb
@@ -11,7 +11,7 @@
     <fieldset class="nhsuk-fieldset">
       <legend class="nhsuk-fieldset__legend nhsuk-fieldset__legend--l">
         <h1 class="nhsuk-fieldset__heading">
-          Social Prescription Recommender
+          Onward Recommender
         </h1>
       </legend>
       <div class="nhsuk-form-group">
