Edge case no recommendations selected

--- a/views/recommendations_summary.erb
+++ b/views/recommendations_summary.erb
@@ -20,6 +20,10 @@
       </li>
       <% end %>
     </ul>
+    <% if @recommender.recommendations_summary[:recommendations].empty? %>
+      <p>No recommendations selected</p>
+    <% end %>
+
   </div>
   <form action="/send" method="get">
     <button class="nhsuk-button" type="submit">
