--- a/views/discharge_summary_step.erb
+++ b/views/discharge_summary_step.erb
@@ -28,6 +28,8 @@
       Continue
     </button>
   </form>
-  <a href="/seeds">populate database</a>
   <a href="/reset">reset database</a>
+  <a href="/seeds">populate database</a>
+  <a href="/adam">adam</a>
+  <a href="/betty">betty</a>
 </div>
